parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    COMMA
    COMMENT

Grammar

Rule 0     S' -> program
Rule 1     program -> statement_list
Rule 2     statement_list -> statement_list statement
Rule 3     statement_list -> statement
Rule 4     statement -> declaration
Rule 5     statement -> assignment
Rule 6     statement -> if_statement
Rule 7     statement -> if_else_statement
Rule 8     statement -> while_statement
Rule 9     statement -> print_statement
Rule 10    declaration -> INT ID ASSIGN expression SEMI
Rule 11    assignment -> ID ASSIGN expression SEMI
Rule 12    print_statement -> PRINT LPAREN expression RPAREN SEMI
Rule 13    if_statement -> IF LPAREN expression RPAREN LBRACE statement_list RBRACE
Rule 14    if_else_statement -> IF LPAREN expression RPAREN LBRACE statement_list RBRACE ELSE LBRACE statement_list RBRACE
Rule 15    while_statement -> WHILE LPAREN expression RPAREN LBRACE statement_list RBRACE
Rule 16    expression -> expression PLUS expression
Rule 17    expression -> expression MINUS expression
Rule 18    expression -> expression MUL expression
Rule 19    expression -> expression DIV expression
Rule 20    expression -> expression GT expression
Rule 21    expression -> expression LT expression
Rule 22    expression -> expression GE expression
Rule 23    expression -> expression LE expression
Rule 24    expression -> expression EQ expression
Rule 25    expression -> expression NE expression
Rule 26    expression -> NUM
Rule 27    expression -> ID

Terminals, with rules where they appear

ASSIGN               : 10 11
COMMA                : 
COMMENT              : 
DIV                  : 19
ELSE                 : 14
EQ                   : 24
GE                   : 22
GT                   : 20
ID                   : 10 11 27
IF                   : 13 14
INT                  : 10
LBRACE               : 13 14 14 15
LE                   : 23
LPAREN               : 12 13 14 15
LT                   : 21
MINUS                : 17
MUL                  : 18
NE                   : 25
NUM                  : 26
PLUS                 : 16
PRINT                : 12
RBRACE               : 13 14 14 15
RPAREN               : 12 13 14 15
SEMI                 : 10 11 12
WHILE                : 15
error                : 

Nonterminals, with rules where they appear

assignment           : 5
declaration          : 4
expression           : 10 11 12 13 14 15 16 16 17 17 18 18 19 19 20 20 21 21 22 22 23 23 24 24 25 25
if_else_statement    : 7
if_statement         : 6
print_statement      : 9
program              : 0
statement            : 2 3
statement_list       : 1 2 13 14 14 15
while_statement      : 8

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . statement_list
    (2) statement_list -> . statement_list statement
    (3) statement_list -> . statement
    (4) statement -> . declaration
    (5) statement -> . assignment
    (6) statement -> . if_statement
    (7) statement -> . if_else_statement
    (8) statement -> . while_statement
    (9) statement -> . print_statement
    (10) declaration -> . INT ID ASSIGN expression SEMI
    (11) assignment -> . ID ASSIGN expression SEMI
    (13) if_statement -> . IF LPAREN expression RPAREN LBRACE statement_list RBRACE
    (14) if_else_statement -> . IF LPAREN expression RPAREN LBRACE statement_list RBRACE ELSE LBRACE statement_list RBRACE
    (15) while_statement -> . WHILE LPAREN expression RPAREN LBRACE statement_list RBRACE
    (12) print_statement -> . PRINT LPAREN expression RPAREN SEMI

    INT             shift and go to state 10
    ID              shift and go to state 11
    IF              shift and go to state 12
    WHILE           shift and go to state 13
    PRINT           shift and go to state 14

    program                        shift and go to state 1
    statement_list                 shift and go to state 2
    statement                      shift and go to state 3
    declaration                    shift and go to state 4
    assignment                     shift and go to state 5
    if_statement                   shift and go to state 6
    if_else_statement              shift and go to state 7
    while_statement                shift and go to state 8
    print_statement                shift and go to state 9

state 1

    (0) S' -> program .



state 2

    (1) program -> statement_list .
    (2) statement_list -> statement_list . statement
    (4) statement -> . declaration
    (5) statement -> . assignment
    (6) statement -> . if_statement
    (7) statement -> . if_else_statement
    (8) statement -> . while_statement
    (9) statement -> . print_statement
    (10) declaration -> . INT ID ASSIGN expression SEMI
    (11) assignment -> . ID ASSIGN expression SEMI
    (13) if_statement -> . IF LPAREN expression RPAREN LBRACE statement_list RBRACE
    (14) if_else_statement -> . IF LPAREN expression RPAREN LBRACE statement_list RBRACE ELSE LBRACE statement_list RBRACE
    (15) while_statement -> . WHILE LPAREN expression RPAREN LBRACE statement_list RBRACE
    (12) print_statement -> . PRINT LPAREN expression RPAREN SEMI

    $end            reduce using rule 1 (program -> statement_list .)
    INT             shift and go to state 10
    ID              shift and go to state 11
    IF              shift and go to state 12
    WHILE           shift and go to state 13
    PRINT           shift and go to state 14

    statement                      shift and go to state 15
    declaration                    shift and go to state 4
    assignment                     shift and go to state 5
    if_statement                   shift and go to state 6
    if_else_statement              shift and go to state 7
    while_statement                shift and go to state 8
    print_statement                shift and go to state 9

state 3

    (3) statement_list -> statement .

    INT             reduce using rule 3 (statement_list -> statement .)
    ID              reduce using rule 3 (statement_list -> statement .)
    IF              reduce using rule 3 (statement_list -> statement .)
    WHILE           reduce using rule 3 (statement_list -> statement .)
    PRINT           reduce using rule 3 (statement_list -> statement .)
    $end            reduce using rule 3 (statement_list -> statement .)
    RBRACE          reduce using rule 3 (statement_list -> statement .)


state 4

    (4) statement -> declaration .

    INT             reduce using rule 4 (statement -> declaration .)
    ID              reduce using rule 4 (statement -> declaration .)
    IF              reduce using rule 4 (statement -> declaration .)
    WHILE           reduce using rule 4 (statement -> declaration .)
    PRINT           reduce using rule 4 (statement -> declaration .)
    $end            reduce using rule 4 (statement -> declaration .)
    RBRACE          reduce using rule 4 (statement -> declaration .)


state 5

    (5) statement -> assignment .

    INT             reduce using rule 5 (statement -> assignment .)
    ID              reduce using rule 5 (statement -> assignment .)
    IF              reduce using rule 5 (statement -> assignment .)
    WHILE           reduce using rule 5 (statement -> assignment .)
    PRINT           reduce using rule 5 (statement -> assignment .)
    $end            reduce using rule 5 (statement -> assignment .)
    RBRACE          reduce using rule 5 (statement -> assignment .)


state 6

    (6) statement -> if_statement .

    INT             reduce using rule 6 (statement -> if_statement .)
    ID              reduce using rule 6 (statement -> if_statement .)
    IF              reduce using rule 6 (statement -> if_statement .)
    WHILE           reduce using rule 6 (statement -> if_statement .)
    PRINT           reduce using rule 6 (statement -> if_statement .)
    $end            reduce using rule 6 (statement -> if_statement .)
    RBRACE          reduce using rule 6 (statement -> if_statement .)


state 7

    (7) statement -> if_else_statement .

    INT             reduce using rule 7 (statement -> if_else_statement .)
    ID              reduce using rule 7 (statement -> if_else_statement .)
    IF              reduce using rule 7 (statement -> if_else_statement .)
    WHILE           reduce using rule 7 (statement -> if_else_statement .)
    PRINT           reduce using rule 7 (statement -> if_else_statement .)
    $end            reduce using rule 7 (statement -> if_else_statement .)
    RBRACE          reduce using rule 7 (statement -> if_else_statement .)


state 8

    (8) statement -> while_statement .

    INT             reduce using rule 8 (statement -> while_statement .)
    ID              reduce using rule 8 (statement -> while_statement .)
    IF              reduce using rule 8 (statement -> while_statement .)
    WHILE           reduce using rule 8 (statement -> while_statement .)
    PRINT           reduce using rule 8 (statement -> while_statement .)
    $end            reduce using rule 8 (statement -> while_statement .)
    RBRACE          reduce using rule 8 (statement -> while_statement .)


state 9

    (9) statement -> print_statement .

    INT             reduce using rule 9 (statement -> print_statement .)
    ID              reduce using rule 9 (statement -> print_statement .)
    IF              reduce using rule 9 (statement -> print_statement .)
    WHILE           reduce using rule 9 (statement -> print_statement .)
    PRINT           reduce using rule 9 (statement -> print_statement .)
    $end            reduce using rule 9 (statement -> print_statement .)
    RBRACE          reduce using rule 9 (statement -> print_statement .)


state 10

    (10) declaration -> INT . ID ASSIGN expression SEMI

    ID              shift and go to state 16


state 11

    (11) assignment -> ID . ASSIGN expression SEMI

    ASSIGN          shift and go to state 17


state 12

    (13) if_statement -> IF . LPAREN expression RPAREN LBRACE statement_list RBRACE
    (14) if_else_statement -> IF . LPAREN expression RPAREN LBRACE statement_list RBRACE ELSE LBRACE statement_list RBRACE

    LPAREN          shift and go to state 18


state 13

    (15) while_statement -> WHILE . LPAREN expression RPAREN LBRACE statement_list RBRACE

    LPAREN          shift and go to state 19


state 14

    (12) print_statement -> PRINT . LPAREN expression RPAREN SEMI

    LPAREN          shift and go to state 20


state 15

    (2) statement_list -> statement_list statement .

    INT             reduce using rule 2 (statement_list -> statement_list statement .)
    ID              reduce using rule 2 (statement_list -> statement_list statement .)
    IF              reduce using rule 2 (statement_list -> statement_list statement .)
    WHILE           reduce using rule 2 (statement_list -> statement_list statement .)
    PRINT           reduce using rule 2 (statement_list -> statement_list statement .)
    $end            reduce using rule 2 (statement_list -> statement_list statement .)
    RBRACE          reduce using rule 2 (statement_list -> statement_list statement .)


state 16

    (10) declaration -> INT ID . ASSIGN expression SEMI

    ASSIGN          shift and go to state 21


state 17

    (11) assignment -> ID ASSIGN . expression SEMI
    (16) expression -> . expression PLUS expression
    (17) expression -> . expression MINUS expression
    (18) expression -> . expression MUL expression
    (19) expression -> . expression DIV expression
    (20) expression -> . expression GT expression
    (21) expression -> . expression LT expression
    (22) expression -> . expression GE expression
    (23) expression -> . expression LE expression
    (24) expression -> . expression EQ expression
    (25) expression -> . expression NE expression
    (26) expression -> . NUM
    (27) expression -> . ID

    NUM             shift and go to state 24
    ID              shift and go to state 22

    expression                     shift and go to state 23

state 18

    (13) if_statement -> IF LPAREN . expression RPAREN LBRACE statement_list RBRACE
    (14) if_else_statement -> IF LPAREN . expression RPAREN LBRACE statement_list RBRACE ELSE LBRACE statement_list RBRACE
    (16) expression -> . expression PLUS expression
    (17) expression -> . expression MINUS expression
    (18) expression -> . expression MUL expression
    (19) expression -> . expression DIV expression
    (20) expression -> . expression GT expression
    (21) expression -> . expression LT expression
    (22) expression -> . expression GE expression
    (23) expression -> . expression LE expression
    (24) expression -> . expression EQ expression
    (25) expression -> . expression NE expression
    (26) expression -> . NUM
    (27) expression -> . ID

    NUM             shift and go to state 24
    ID              shift and go to state 22

    expression                     shift and go to state 25

state 19

    (15) while_statement -> WHILE LPAREN . expression RPAREN LBRACE statement_list RBRACE
    (16) expression -> . expression PLUS expression
    (17) expression -> . expression MINUS expression
    (18) expression -> . expression MUL expression
    (19) expression -> . expression DIV expression
    (20) expression -> . expression GT expression
    (21) expression -> . expression LT expression
    (22) expression -> . expression GE expression
    (23) expression -> . expression LE expression
    (24) expression -> . expression EQ expression
    (25) expression -> . expression NE expression
    (26) expression -> . NUM
    (27) expression -> . ID

    NUM             shift and go to state 24
    ID              shift and go to state 22

    expression                     shift and go to state 26

state 20

    (12) print_statement -> PRINT LPAREN . expression RPAREN SEMI
    (16) expression -> . expression PLUS expression
    (17) expression -> . expression MINUS expression
    (18) expression -> . expression MUL expression
    (19) expression -> . expression DIV expression
    (20) expression -> . expression GT expression
    (21) expression -> . expression LT expression
    (22) expression -> . expression GE expression
    (23) expression -> . expression LE expression
    (24) expression -> . expression EQ expression
    (25) expression -> . expression NE expression
    (26) expression -> . NUM
    (27) expression -> . ID

    NUM             shift and go to state 24
    ID              shift and go to state 22

    expression                     shift and go to state 27

state 21

    (10) declaration -> INT ID ASSIGN . expression SEMI
    (16) expression -> . expression PLUS expression
    (17) expression -> . expression MINUS expression
    (18) expression -> . expression MUL expression
    (19) expression -> . expression DIV expression
    (20) expression -> . expression GT expression
    (21) expression -> . expression LT expression
    (22) expression -> . expression GE expression
    (23) expression -> . expression LE expression
    (24) expression -> . expression EQ expression
    (25) expression -> . expression NE expression
    (26) expression -> . NUM
    (27) expression -> . ID

    NUM             shift and go to state 24
    ID              shift and go to state 22

    expression                     shift and go to state 28

state 22

    (27) expression -> ID .

    SEMI            reduce using rule 27 (expression -> ID .)
    PLUS            reduce using rule 27 (expression -> ID .)
    MINUS           reduce using rule 27 (expression -> ID .)
    MUL             reduce using rule 27 (expression -> ID .)
    DIV             reduce using rule 27 (expression -> ID .)
    GT              reduce using rule 27 (expression -> ID .)
    LT              reduce using rule 27 (expression -> ID .)
    GE              reduce using rule 27 (expression -> ID .)
    LE              reduce using rule 27 (expression -> ID .)
    EQ              reduce using rule 27 (expression -> ID .)
    NE              reduce using rule 27 (expression -> ID .)
    RPAREN          reduce using rule 27 (expression -> ID .)


state 23

    (11) assignment -> ID ASSIGN expression . SEMI
    (16) expression -> expression . PLUS expression
    (17) expression -> expression . MINUS expression
    (18) expression -> expression . MUL expression
    (19) expression -> expression . DIV expression
    (20) expression -> expression . GT expression
    (21) expression -> expression . LT expression
    (22) expression -> expression . GE expression
    (23) expression -> expression . LE expression
    (24) expression -> expression . EQ expression
    (25) expression -> expression . NE expression

    SEMI            shift and go to state 29
    PLUS            shift and go to state 30
    MINUS           shift and go to state 31
    MUL             shift and go to state 32
    DIV             shift and go to state 33
    GT              shift and go to state 34
    LT              shift and go to state 35
    GE              shift and go to state 36
    LE              shift and go to state 37
    EQ              shift and go to state 38
    NE              shift and go to state 39


state 24

    (26) expression -> NUM .

    SEMI            reduce using rule 26 (expression -> NUM .)
    PLUS            reduce using rule 26 (expression -> NUM .)
    MINUS           reduce using rule 26 (expression -> NUM .)
    MUL             reduce using rule 26 (expression -> NUM .)
    DIV             reduce using rule 26 (expression -> NUM .)
    GT              reduce using rule 26 (expression -> NUM .)
    LT              reduce using rule 26 (expression -> NUM .)
    GE              reduce using rule 26 (expression -> NUM .)
    LE              reduce using rule 26 (expression -> NUM .)
    EQ              reduce using rule 26 (expression -> NUM .)
    NE              reduce using rule 26 (expression -> NUM .)
    RPAREN          reduce using rule 26 (expression -> NUM .)


state 25

    (13) if_statement -> IF LPAREN expression . RPAREN LBRACE statement_list RBRACE
    (14) if_else_statement -> IF LPAREN expression . RPAREN LBRACE statement_list RBRACE ELSE LBRACE statement_list RBRACE
    (16) expression -> expression . PLUS expression
    (17) expression -> expression . MINUS expression
    (18) expression -> expression . MUL expression
    (19) expression -> expression . DIV expression
    (20) expression -> expression . GT expression
    (21) expression -> expression . LT expression
    (22) expression -> expression . GE expression
    (23) expression -> expression . LE expression
    (24) expression -> expression . EQ expression
    (25) expression -> expression . NE expression

    RPAREN          shift and go to state 40
    PLUS            shift and go to state 30
    MINUS           shift and go to state 31
    MUL             shift and go to state 32
    DIV             shift and go to state 33
    GT              shift and go to state 34
    LT              shift and go to state 35
    GE              shift and go to state 36
    LE              shift and go to state 37
    EQ              shift and go to state 38
    NE              shift and go to state 39


state 26

    (15) while_statement -> WHILE LPAREN expression . RPAREN LBRACE statement_list RBRACE
    (16) expression -> expression . PLUS expression
    (17) expression -> expression . MINUS expression
    (18) expression -> expression . MUL expression
    (19) expression -> expression . DIV expression
    (20) expression -> expression . GT expression
    (21) expression -> expression . LT expression
    (22) expression -> expression . GE expression
    (23) expression -> expression . LE expression
    (24) expression -> expression . EQ expression
    (25) expression -> expression . NE expression

    RPAREN          shift and go to state 41
    PLUS            shift and go to state 30
    MINUS           shift and go to state 31
    MUL             shift and go to state 32
    DIV             shift and go to state 33
    GT              shift and go to state 34
    LT              shift and go to state 35
    GE              shift and go to state 36
    LE              shift and go to state 37
    EQ              shift and go to state 38
    NE              shift and go to state 39


state 27

    (12) print_statement -> PRINT LPAREN expression . RPAREN SEMI
    (16) expression -> expression . PLUS expression
    (17) expression -> expression . MINUS expression
    (18) expression -> expression . MUL expression
    (19) expression -> expression . DIV expression
    (20) expression -> expression . GT expression
    (21) expression -> expression . LT expression
    (22) expression -> expression . GE expression
    (23) expression -> expression . LE expression
    (24) expression -> expression . EQ expression
    (25) expression -> expression . NE expression

    RPAREN          shift and go to state 42
    PLUS            shift and go to state 30
    MINUS           shift and go to state 31
    MUL             shift and go to state 32
    DIV             shift and go to state 33
    GT              shift and go to state 34
    LT              shift and go to state 35
    GE              shift and go to state 36
    LE              shift and go to state 37
    EQ              shift and go to state 38
    NE              shift and go to state 39


state 28

    (10) declaration -> INT ID ASSIGN expression . SEMI
    (16) expression -> expression . PLUS expression
    (17) expression -> expression . MINUS expression
    (18) expression -> expression . MUL expression
    (19) expression -> expression . DIV expression
    (20) expression -> expression . GT expression
    (21) expression -> expression . LT expression
    (22) expression -> expression . GE expression
    (23) expression -> expression . LE expression
    (24) expression -> expression . EQ expression
    (25) expression -> expression . NE expression

    SEMI            shift and go to state 43
    PLUS            shift and go to state 30
    MINUS           shift and go to state 31
    MUL             shift and go to state 32
    DIV             shift and go to state 33
    GT              shift and go to state 34
    LT              shift and go to state 35
    GE              shift and go to state 36
    LE              shift and go to state 37
    EQ              shift and go to state 38
    NE              shift and go to state 39


state 29

    (11) assignment -> ID ASSIGN expression SEMI .

    INT             reduce using rule 11 (assignment -> ID ASSIGN expression SEMI .)
    ID              reduce using rule 11 (assignment -> ID ASSIGN expression SEMI .)
    IF              reduce using rule 11 (assignment -> ID ASSIGN expression SEMI .)
    WHILE           reduce using rule 11 (assignment -> ID ASSIGN expression SEMI .)
    PRINT           reduce using rule 11 (assignment -> ID ASSIGN expression SEMI .)
    $end            reduce using rule 11 (assignment -> ID ASSIGN expression SEMI .)
    RBRACE          reduce using rule 11 (assignment -> ID ASSIGN expression SEMI .)


state 30

    (16) expression -> expression PLUS . expression
    (16) expression -> . expression PLUS expression
    (17) expression -> . expression MINUS expression
    (18) expression -> . expression MUL expression
    (19) expression -> . expression DIV expression
    (20) expression -> . expression GT expression
    (21) expression -> . expression LT expression
    (22) expression -> . expression GE expression
    (23) expression -> . expression LE expression
    (24) expression -> . expression EQ expression
    (25) expression -> . expression NE expression
    (26) expression -> . NUM
    (27) expression -> . ID

    NUM             shift and go to state 24
    ID              shift and go to state 22

    expression                     shift and go to state 44

state 31

    (17) expression -> expression MINUS . expression
    (16) expression -> . expression PLUS expression
    (17) expression -> . expression MINUS expression
    (18) expression -> . expression MUL expression
    (19) expression -> . expression DIV expression
    (20) expression -> . expression GT expression
    (21) expression -> . expression LT expression
    (22) expression -> . expression GE expression
    (23) expression -> . expression LE expression
    (24) expression -> . expression EQ expression
    (25) expression -> . expression NE expression
    (26) expression -> . NUM
    (27) expression -> . ID

    NUM             shift and go to state 24
    ID              shift and go to state 22

    expression                     shift and go to state 45

state 32

    (18) expression -> expression MUL . expression
    (16) expression -> . expression PLUS expression
    (17) expression -> . expression MINUS expression
    (18) expression -> . expression MUL expression
    (19) expression -> . expression DIV expression
    (20) expression -> . expression GT expression
    (21) expression -> . expression LT expression
    (22) expression -> . expression GE expression
    (23) expression -> . expression LE expression
    (24) expression -> . expression EQ expression
    (25) expression -> . expression NE expression
    (26) expression -> . NUM
    (27) expression -> . ID

    NUM             shift and go to state 24
    ID              shift and go to state 22

    expression                     shift and go to state 46

state 33

    (19) expression -> expression DIV . expression
    (16) expression -> . expression PLUS expression
    (17) expression -> . expression MINUS expression
    (18) expression -> . expression MUL expression
    (19) expression -> . expression DIV expression
    (20) expression -> . expression GT expression
    (21) expression -> . expression LT expression
    (22) expression -> . expression GE expression
    (23) expression -> . expression LE expression
    (24) expression -> . expression EQ expression
    (25) expression -> . expression NE expression
    (26) expression -> . NUM
    (27) expression -> . ID

    NUM             shift and go to state 24
    ID              shift and go to state 22

    expression                     shift and go to state 47

state 34

    (20) expression -> expression GT . expression
    (16) expression -> . expression PLUS expression
    (17) expression -> . expression MINUS expression
    (18) expression -> . expression MUL expression
    (19) expression -> . expression DIV expression
    (20) expression -> . expression GT expression
    (21) expression -> . expression LT expression
    (22) expression -> . expression GE expression
    (23) expression -> . expression LE expression
    (24) expression -> . expression EQ expression
    (25) expression -> . expression NE expression
    (26) expression -> . NUM
    (27) expression -> . ID

    NUM             shift and go to state 24
    ID              shift and go to state 22

    expression                     shift and go to state 48

state 35

    (21) expression -> expression LT . expression
    (16) expression -> . expression PLUS expression
    (17) expression -> . expression MINUS expression
    (18) expression -> . expression MUL expression
    (19) expression -> . expression DIV expression
    (20) expression -> . expression GT expression
    (21) expression -> . expression LT expression
    (22) expression -> . expression GE expression
    (23) expression -> . expression LE expression
    (24) expression -> . expression EQ expression
    (25) expression -> . expression NE expression
    (26) expression -> . NUM
    (27) expression -> . ID

    NUM             shift and go to state 24
    ID              shift and go to state 22

    expression                     shift and go to state 49

state 36

    (22) expression -> expression GE . expression
    (16) expression -> . expression PLUS expression
    (17) expression -> . expression MINUS expression
    (18) expression -> . expression MUL expression
    (19) expression -> . expression DIV expression
    (20) expression -> . expression GT expression
    (21) expression -> . expression LT expression
    (22) expression -> . expression GE expression
    (23) expression -> . expression LE expression
    (24) expression -> . expression EQ expression
    (25) expression -> . expression NE expression
    (26) expression -> . NUM
    (27) expression -> . ID

    NUM             shift and go to state 24
    ID              shift and go to state 22

    expression                     shift and go to state 50

state 37
